<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Addpost"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>



    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Booktitle"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="text"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/layout_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/author"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="text"
        android:background="@drawable/layout_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Genre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="text"
        android:background="@drawable/layout_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Review"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="text"
        android:background="@drawable/layout_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Rating"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="text"
        android:background="@drawable/layout_et"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_et"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/summary"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/coverpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cover Page"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_margin="20dp"
            />

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:gravity="right"
            android:src="@drawable/cover_image_placeholder"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_margin="20dp"
            />

        <Spinner
            android:id="@+id/spin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/layout_btn"
            android:fontFamily="@font/roboto_regular"
            android:onClick="onClick"
            android:text="Post"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/layout_btn"
            android:fontFamily="@font/roboto_regular"
            android:onClick="onClick"
            android:text="Cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>